# ignite

./: .clippy.toml  .editorconfig  ANALISE_COMPLETA.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INDICE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  ignite.conf  ignite.conf.example  rust-toolchain.toml  rustfmt.toml
docs/: API.md  ARQUITETURA.md  BUILD.md  CONFIGURACAO.md  CONTRIBUINDO.md  DESENVOLVIMENTO.md  FILESYSTEM.md  MEMORIA.md  PROTOCOLOS.md  README.md  SEGURANCA.md  TESTES.md  TROUBLESHOOTING.md  configuration.md  development.md  protocols.md
examples/: ignite.cfg
src/: boot_info.rs  bump_allocator.rs  error.rs  io.rs  lib.rs  logger.rs  main.rs  panic.rs  redstonefs.rs  serial.rs  serial_16550.rs
src/arch/: aarch64.rs  mod.rs  riscv64.rs
src/arch/x86/: instructions.rs  io.rs  mod.rs  registers.rs  serial.rs  x32.rs  x64.rs
src/config/: boot_config.rs  loader.rs  macros.rs  mod.rs  parser.rs  path.rs  paths.rs  types.rs  validator.rs
src/core/: boot_info.rs  colors.rs  config.rs  constants.rs  error.rs  handoff.rs  logging.rs  mod.rs  types.rs
src/elf/: header.rs  loader.rs  mod.rs  parser.rs
src/fs/: compression.rs  dev.rs  fat32.rs  initfs.rs  iso9660.rs  loader.rs  mod.rs  path.rs  redstonefs.rs  uefi.rs  vfs.rs
src/hardware/: acpi.rs  fdt.rs  io.rs  mod.rs  serial.rs  storage.rs
src/hardware/serial/: mod.rs  uart_16550.rs  wrapper.rs
src/memory/: allocator.rs  bump_allocator.rs  handoff.rs  layout.rs  map.rs  mod.rs  paging.rs  region.rs
src/os/: mod.rs  uefi.rs
src/os/bios/: disk.rs  macros.rs  memory_map.rs  mod.rs  panic.rs  serial.rs  vbe.rs
src/os/uefi/: acpi.rs  device.rs  disk.rs  display.rs  dtb.rs  memory_map.rs  mod.rs  video_mode.rs
src/os/uefi/arch/: aarch64.rs  x86_64.rs
src/os/uefi/arch/riscv64/: mod.rs
src/protos/: chainload.rs  limine.rs  linux.rs  mod.rs  multiboot1.rs  multiboot2.rs  redstone.rs
src/recovery/: diagnostics.rs  fallback.rs  keydetect.rs  manager.rs  mod.rs  state.rs
src/security/: blake2b.rs  integrity.rs  mod.rs  policy.rs  rollback.rs  secure_boot.rs  secureboot.rs  tpm.rs
src/uefi/: base.rs  helpers.rs  mod.rs  status.rs
src/uefi/proto/: loaded_image.rs  mod.rs
src/uefi/proto/console/: gop.rs  mod.rs
src/uefi/proto/media/: file.rs  fs.rs  mod.rs
src/uefi/table/: boot.rs  boot_helpers.rs  config.rs  header.rs  helpers.rs  mod.rs  runtime.rs  system.rs
src/ui/: boot_menu.rs  editor.rs  font.rs  graphics.rs  input.rs  menu.rs  mod.rs  terminal.rs  theme.rs
src/video/: framebuffer.rs  gop.rs  mod.rs  mode.rs  pixel.rs
tests/: README.md  integration_tests.rs  regression_tests.rs
tests/fixtures/: README.md  sample_config.conf  sample_config_hierarchical.conf  sample_config_with_macros.conf
tests/integration/: boot_flow_tests.rs  mod.rs
tests/unit/: boot_info_tests.rs  config_parser_tests.rs  config_tests.rs  elf_parser_tests.rs  elf_tests.rs  fs_tests.rs  memory_tests.rs  mod.rs  security_tests.rs
tools/: .gitignore  README.md  ignite.py
