[package]
name = "ignite"
version = "0.4.0"
edition = "2021"                                           # 2024 ainda é instável; 2021 é o padrão industrial atual
authors = ["Redstone OS Team"]
description = "Industrial UEFI Bootloader for Redstone OS"

[dependencies]
# Log leve para bootloader (interface com nosso logger.rs)
log = "0.4"

# Parsing de ELF e PE (necessário para carregar Kernel e Chainload)
goblin = { version = "0.10.4", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }

# Manipulação de bits (usado em drivers e flags)
bitflags = "2.4"

# Dependência local do sistema (Mantenha se o caminho existir, caso contrário comente)
# O código do FS usa syscall::Error, então isso é necessário.
syscall = { path = "../libs/syscall" }

# Removido: x86_64 (Nós implementamos port I/O e paging manualmente em src/arch e src/memory)
# Removido: plain (Não utilizado explicitamente nos novos módulos, usamos repr(C))

[features]
default = []
# Habilita alocador da biblioteca (útil para testes unitários fora do binário)
lib_allocator = []

# --- Perfis de Compilação (CRÍTICO PARA BOOTLOADER) ---

[profile.dev]
panic = "abort" # Sem unwinding (diminui tamanho, evita símbolos externos)

[profile.release]
panic = "abort"
lto = true        # Link Time Optimization (binário menor e mais rápido)
codegen-units = 1 # Melhor otimização ao custo de tempo de compilação
opt-level = "z"   # Otimizar para tamanho (preferível em bootloaders EFI)
strip = true      # Remove símbolos de debug do binário final
