[package]
name = "ignite"
version = "0.0.5"
edition = "2021"
authors = ["Redstone OS Team"]
description = "Industrial UEFI Bootloader for Redstone OS"

[lib]
test = false
doctest = false
harness = false
bench = false

[[bin]]
name = "ignite"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Log leve para bootloader (interface com nosso logger.rs)
log = "0.4"

# Parsing de ELF e PE (necessário para carregar Kernel e Chainload)
goblin = { version = "0.10.4", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }

# Manipulação de bits (usado em drivers e flags)
bitflags = "2.4"

# Nota: syscall foi movido para redpowder SDK
# Use redpowder::syscall para programas userspace

# Removido: x86_64 (Nós implementamos port I/O e paging manualmente em src/arch e src/memory)
# Removido: plain (Não utilizado explicitamente nos novos módulos, usamos repr(C))

[features]
default = []
# Habilita alocador da biblioteca (útil para testes unitários fora do binário)
lib_allocator = []

# --- Perfis de Compilação (CRÍTICO PARA BOOTLOADER) ---

[profile.dev]
panic = "abort" # Sem unwinding (diminui tamanho, evita símbolos externos)

[profile.release]
panic = "abort"
lto = true        # Link Time Optimization (binário menor e mais rápido)
codegen-units = 1 # Melhor otimização ao custo de tempo de compilação
opt-level = "z"   # Otimizar para tamanho (preferível em bootloaders EFI)
strip = true      # Remove símbolos de debug do binário final
