[package]
name = "ignite"
version = "0.0.5"
edition = "2021"
authors = ["Redstone OS Team"]
description = "Industrial UEFI Bootloader for Redstone OS"

[lib]
test = false
doctest = false
harness = false
bench = false

[[bin]]
name = "ignite"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Log leve para bootloader (interface com nosso logger.rs)
log = "0.4"

# Parsing de ELF e PE (necessário para carregar Kernel e Chainload)
goblin = { version = "0.10.4", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }

# Manipulação de bits (usado em drivers e flags)
bitflags = "2.4"

# Nota: syscall foi movido para redpowder SDK
# Use redpowder::syscall para programas userspace

# Removido: x86_64 (Nós implementamos port I/O e paging manualmente em src/arch e src/memory)
# Removido: plain (Não utilizado explicitamente nos novos módulos, usamos repr(C))

[features]
default = []
# Habilita alocador da biblioteca (útil para testes unitários fora do binário)
lib_allocator = []

# --- Perfis de Compilação (CRÍTICO PARA BOOTLOADER) ---

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = false


[profile.opt-release]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = false
incremental = false
